--- a/package.json
+++ b/package.json
@@ -9,19 +9,20 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "next": "^12.0.7",
+    "next": "^12.0.8",
+    "next-themes": "^0.0.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.1",
-    "eslint": "^8.6.0",
-    "eslint-config-next": "^12.0.7",
+    "autoprefixer": "^10.4.2",
+    "eslint": "^8.7.0",
+    "eslint-config-next": "^12.0.8",
     "husky": "^7.0.4",
-    "lint-staged": "^12.1.5",
+    "lint-staged": "^12.3.1",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
-    "tailwindcss": "^3.0.8"
+    "tailwindcss": "^3.0.15"
   },
   "lint-staged": {
     "*.{js,jsx}": "eslint --cache --fix",
